--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^1.12.14"
   },
   "dependencies": {
+    "axios": "^0.9.1",
     "firebase": "^2.4.2",
     "history": "^2.0.1",
     "react-router": "^2.0.1",
